--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css')}}">
-    <script src="https://code.jquery.com/jquery-3.5.0.js"
-        integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename = 'jquery.js')}}"></script>
     <script src="{{ url_for('static', filename = 'main.js')}}"></script>
 
 </head>
