--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -39,8 +39,7 @@
 
         <!--add the all inputs under this form, 
         include name attribute in each input tag
-        ex:- <input name='columns_to_consider'>
-             <input name='data_types'> -->
+        ex:- <input name='columns_to_consider'>-->
     </form>
 
     <button onclick=upload()>UPLOAD</button>
