--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -39,7 +39,8 @@
 
         <!--add the all inputs under this form, 
         include name attribute in each input tag
-        ex:- <input name='columns_to_consider'>-->
+        ex:- <input name='columns_to_consider'>
+    tu chutoya!!!!-->
     </form>
 
     <button onclick=upload()>UPLOAD</button>
