--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -19,23 +19,32 @@
 </head>
 
 <body>
-    <h2>Churn Data Analysis</h2>
+    <div class="container">
+        <div class="jumbotron">
+            <h2>Churn Data Analysis</h2>
+        </div>
+    </div>
+   
+    
 
     <form id='getfile' action="/upload" method="POST" enctype="multipart/form-data" accept=".csv">
         <input type="file" id="fileUpload" name="file">
+        <br><br>
         <!--add the all inputs under this form, 
         include name attribute in each input tag
         ex:- <input name='columns_to_consider'>
         tu chutoya!!!!-->
     </form>
-
-    <button onclick=upload()>UPLOAD</button>
-    <div class="container">
-        <div id="dvCSV" class="table-responsive"></div>
-    </div>
-
-
-    <button type="submit" form="getfile">Submit</button>
+    <div class="uploadsss">
+        <button onclick=upload() class="btn btn-default btn-lg" style="margin-right: 16px">UPLOAD</button>   
+        <button id="clean" type="submit" form="getfile" class="btn btn-default btn-lg" disabled="disabled" style="margin-right: 16px">Clean Data</button>
+        <br><br>
+        <div class="container">
+            <div id="dvCSV" class="table-responsive"></div>
+        </div>
+        
+        </div>
+   
 
 </body>
 
