--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -40,7 +40,9 @@
         <button id="clean" type="submit" form="getfile" class="btn btn-default btn-lg" disabled="disabled" style="margin-right: 16px">Clean Data</button>
         <br><br>
         <div class="container">
-            <div id="dvCSV" class="table-responsive"></div>
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
+            <div id="dvCSV" ></div>
+            </div>
         </div>
         
         </div>
