--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -33,12 +33,16 @@
         <br>
     </form>
     <div class="uploadsss">
-        <button onclick=upload() class="btn btn-default btn-lg" style="margin-right: 16px">UPLOAD</button>
-        <button id="clean" type="submit" form="getfile" class="btn btn-default btn-lg" disabled="disabled"
-            style="margin-right: 16px">Clean Data</button>
+        <button class="btn btn-primary" onclick=upload()>UPLOAD</button>
+        <button class="btn btn-success" id="clean" type="submit" form="getfile" disabled="disabled">Clean Data</button>
         <br><br>
         <div class="container">
-            <div id="dvCSV" class="table-responsive"></div>
+            <div class="table-responsive">
+
+                <br />
+                <div id="table">
+                </div>
+            </div>
         </div>
 
     </div>
