--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,9 +1,17 @@
-h2{
+#preloader {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background: #151d1e url("loader1.svg") center no-repeat;
+  z-index: 100;
+}
+
+h2 {
   text-align: center;
 }
-.jumbotron{
-  background-color: #AC3B61;                   
-  color:#E3E2DF;
+.jumbotron {
+  background-color: #ac3b61;
+  color: #e3e2df;
 }
 /* .tableb{
   max-width: 33%;
@@ -17,7 +25,7 @@ h2{
   position: relative;
   height: 500px;
   overflow: auto;
-  }
-  .table-wrapper-scroll-y {
+}
+.table-wrapper-scroll-y {
   display: block;
-  }
+}
