couldnt pull hence commit

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -32,9 +32,8 @@
         <br>
         <br>
         <div class="container">
-            <div class="table-wrapper-scroll-y my-custom-scrollbar loader">
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
                 <div id="table">
-                    <img class="animated-gif" id="gifani" src="https://media.giphy.com/media/3ohzdOrcdpiD26TPt6/giphy.gif" style="display: none;"  alt="Loading..">
                 </div>
                 
             </div>
