--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -13,32 +13,21 @@ body{
   position: relative;
   height: 350px;
   overflow: auto;
+  background-color: #202020;
+  color: #FF00AA;
   }
   .table-wrapper-scroll-y {
   display: block;
+  background-color: #202020;
+  color:#FF00AA;
   }
-  #loading{
-    width: 20px;
-    height: 20px;
-     top: 0;
-    left: 0; 
-    position: relative;
-    display: block;
-    opacity: 0.7;
-    background-color: #000000;
-     z-index: 99; 
-    text-align: center;
+  table{
+    color:#FF00AA;
+    background-color: #202020;
+
   }
-  #loading-image {
-    position: relative;
-    top: 100px;
-    left: 240px;
-    z-index: 100; 
-  }
-  img.animated-gif{
-    width: 120px;
-    height: auto;
-  }
+
+  
   th{
     background-color: #68228B	;
     color:#ECC8EC	
