--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -7,7 +7,7 @@ body {
   position: fixed;
   height: 100vh;
   width: 100%;
-  background: #151d1e url("preloader.gif") center no-repeat;
+  background: #151d1e url("../img/preloader.gif") center no-repeat;
   z-index: 100;
 }
 
