--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -100,7 +100,12 @@
     <!--center_wrapper end -->
 
     <div id="right_wrapper">
-
+        <div class="timeline">
+            
+                <ul class="filezz">
+                </ul>
+            
+        </div>
     </div>
     <!--right_wrapper end -->
 
