scroll bar and history(not completed)

--- a/flaskr/static/css/right_sidebar.css
+++ b/flaskr/static/css/right_sidebar.css
@@ -5,7 +5,7 @@
   height: 100vh;
   border-left-style: dashed;
 }
-.timeline{
+.history{
   background-color: #1b262c;
   font: #ff0000;
   font-weight: bold;
