--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -96,14 +96,14 @@
     </div>
     <!--center_wrapper end -->
 
+    <!--right_wrapper start -->
     <div id="right_wrapper">
-        <div class="timeline">
-            
-                <ul class="filezz">
-                </ul>
-            
+        <div class="history">
+            <ul id="listz">
+
+            </ul>
         </div>
-        <!--right_wrapper start -->
+        
 
     </div>
     <!--right_wrapper end -->
