finished table cleaning

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -98,6 +98,7 @@
 
     <div id="right_wrapper">
         <!--right_wrapper start -->
+        <button onclick=gethistory()>History</button>
 
     </div>
     <!--right_wrapper end -->
