--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -72,25 +72,8 @@ input[type="file"] {
   color: black;
 }
 
-/*  */
-
-/* #preloader2 {
-  display: block;
-  position: fixed;
-  height: 100vh;
-  width: 100%;
-  background: #151d1e
-    url("https://media.giphy.com/media/3ohzdOrcdpiD26TPt6/giphy.gif") center
-    no-repeat;
-  z-index: 100;
-} */
-
-/* h2 {
+h2 {
   text-align: center;
-}
-.jumbotron {
-  background-color: #ac3b61;
-  color: #e3e2df;
 }
 
 .my-custom-scrollbar {
@@ -101,29 +84,8 @@ input[type="file"] {
 .table-wrapper-scroll-y {
   display: block;
 }
-#loading {
-  width: 20px;
-  height: 20px;
-  top: 0;
-  left: 0;
-  position: relative;
-  display: block;
-  opacity: 0.7;
-  background-color: #000000;
-  z-index: 99;
-  text-align: center;
-}
-#loading-image {
-  position: relative;
-  top: 100px;
-  left: 240px;
-  z-index: 100;
-}
-img.animated-gif {
-  width: 120px;
-  height: auto;
-}
+
 th {
   background-color: #68228b;
   color: #ecc8ec;
-} */
+}
