--- a/flaskr/static/css/right_sidebar.css
+++ b/flaskr/static/css/right_sidebar.css
@@ -3,11 +3,12 @@
   right: 0px;
   width: 16%;
   height: 100vh;
-  border-left-style: dashed;
+  
 }
 .history{
   background-color: #1b262c;
   font: #ff0000;
   font-weight: bold;
-  height: 50%;
+  height: 25%;
+  padding-top: 0 px;
 }
