--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -52,8 +52,8 @@
 
    <!-- NEW HOVER NAVBAR START-->
    <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
-    <a href="#"><span><i class="material-icons">info</i><span class="icon-text">&nbsp;&nbsp;&nbsp;&nbsp;about</span></a><br>
-    <a href="#"><i class="material-icons">spa</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;services</a></span>
+    <a href="#"><span><i class="material-icons">info</i><span class="icon-text">&nbsp;&nbsp;&nbsp;&nbsp;Table</span></a><br>
+    <a href="#"><i class="material-icons">spa</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;about</a></span>
     </a><br>
     <a href="#"><i class="material-icons">monetization_on</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;clients</span></a><br>
     <a href="#"><i class="material-icons">email</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;contact<span></a>
@@ -120,7 +120,7 @@
     <!--right_wrapper start -->
     <div id="right_wrapper">
         <!--right_wrapper start -->
-         <button onclick=gethistory()>History</button> 
+         <button onclick=gethistory() id="histori">History</button> 
         <div class="history">
             <ul id="listz">
 
