--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -3,6 +3,10 @@ body {
   background-color: #151d1e;
   display: flex;
 }
+
+#histori{
+  display: none;
+}
 #naam{
   float: left;
   margin-left: 80px;
