--- a/flaskr/static/css/sidebar.css
+++ b/flaskr/static/css/sidebar.css
@@ -41,32 +41,31 @@
   border-radius: 5%;
   background: linear-gradient(#ff4b33, #9603b3); */
 
-
 /* @media (max-width: 768px) { */
-  /* 80px and its content aligned to centre. Pushing it off the screen with the
+/* 80px and its content aligned to centre. Pushing it off the screen with the
        negative left margin
     */
-  /* #sidebar {
+/* #sidebar {
     min-width: 80px;
     max-width: 80px;
     text-align: center;
     margin-left: -80px !important;
   } */
 
-  /* Toggling the sidebar header content, 
+/* Toggling the sidebar header content, 
        hide the big heading [h3] and showing the small heading [strong] and vice versa
     */
-  /* #sidebar .sidebar-header strong {
+/* #sidebar .sidebar-header strong {
     display: none;
   } */
 
-  /* Downsize the navigation links font size */
-  /* #sidebar ul li a {
+/* Downsize the navigation links font size */
+/* #sidebar ul li a {
     padding: 20px 10px;
     font-size: 0.85em;
   } */
 
-  /* #sidebar ul li a i {
+/* #sidebar ul li a i {
     margin-right: 0;
     display: block;
     font-size: 1.5em;
@@ -74,12 +73,9 @@
   }
 } */
 
-
-
-
 .sidebar {
-  height: 100%;
-  width: 85px;
+  height: 100vh;
+  width: 4.4%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -122,7 +118,7 @@
 }
 
 #main {
-  transition: margin-left .5s;
+  transition: margin-left 0.5s;
   padding: 16px;
   margin-left: 100px;
 }
@@ -130,9 +126,9 @@
 
 @media screen and (max-height: 250px) {
   .sidebar {
-      padding-top: 15px;
+    padding-top: 15px;
   }
   .sidebar a {
-      font-size: 12px;
+    font-size: 12px;
   }
 }
